--- a/conley_fisheries_assignment.Rmd
+++ b/conley_fisheries_assignment.Rmd
@@ -1,7 +1,7 @@
 ---
-title: " "
-author: " "
-date: " "
+title: "Cionley Fisheries Simulation"
+author: "Atul Sehgal"
+date: "10-Sep-2022"
 output: 
   html_document:
     toc: true
@@ -28,7 +28,7 @@ knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 library(tidyverse) 
 
 # Define n
-n <- 500
+n <- 5000
 
 # Empty data frame for 1000 simulated days
 data <- data.frame(day = seq(1:n),
